fix bug with background image on mobile safari

--- a/src/blocks/background-image/background-image.css
+++ b/src/blocks/background-image/background-image.css
@@ -2,14 +2,14 @@
   z-index: -1;
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
   height: 100%;
   width: 100%;
 
-  background-size: auto 100%;
   background-image: url('../../images/backgroung-image-1.png');
-  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-size: cover;
 }
